[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faircheck-ai"
version = "0.1.0"
description = "A Python toolkit for testing bias and assessing fairness in AI and predictive models"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Karin Wu", email = "karin.wu@rgare.com"}
]
keywords = ["fairness", "bias", "machine learning", "ai", "model governance"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/faircheck-ai"
Documentation = "https://github.com/yourusername/faircheck-ai/blob/main/README.md"
Repository = "https://github.com/yourusername/faircheck-ai"
"Bug Tracker" = "https://github.com/yourusername/faircheck-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["faircheck_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=faircheck_ai --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
